[package]
name = "piggybank"
version = "0.3.1"
description = "A vault for fungible tokens linked to NFT collections."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "piggybank"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-security-txt = "1.1.1"
